src/components/Header/Header.module.scss
.header {
  padding: 7px 1rem;
  border-bottom: 1px solid var(--border-color);
  background-color: var(--bg-page);
  position: sticky;
  top: 0;

  &.sticky {
    border-bottom: 0;
    box-shadow: 0px 0.8rem 3rem rgba(0, 0, 0, 0.5);
  }

  &_wrapper {
    display: flex;
    justify-content: space-between;
    column-gap: 2.5rem;
    row-gap: 1rem;

    @media (max-width: $mobile-screen) {
      flex-direction: column;
    }
  }
}

.logoLink {
  display: flex;
  align-items: center;

  &:hover {
    .appLogo,
    .appName {
      color: var(--font-main-color-hover);
      fill: var(--font-main-color-hover);
    }
  }

  @media (max-width: $mobile-screen) {
    flex-direction: column;
  }

  .appLogo {
    width: 3.2rem;
    height: 3.2rem;
    margin-right: 5px;

    fill: var(--font-main-color);
    transition: fill 0.2s linear;
  }

  .appName {
    color: var(--font-main-color);
    transition: color 0.2s linear;
  }
}

